Change some styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .clip-path {
+    clip-path: polygon(0 0, 100% 0, 100% 52%, 0 52%);
+  }
+}
