Add spinner svg to loading

--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,12 @@
   *::-webkit-scrollbar-thumb:hover {
     background: #c0a0b9;
   }
-}
-
-@layer utilities {
   .clip-path {
     clip-path: polygon(0 0, 100% 0, 100% 52%, 0 52%);
   }
+}
+
+@layer components {
   .rdw-option-active {
     border: 1px solid black;
   }
