--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,46 @@
+/* oswald-regular - latin */
+@font-face {
+  font-family: "Oswald";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/fonts/oswald/oswald-v48-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("./assets/fonts/oswald/oswald-v48-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("./assets/fonts/oswald/oswald-v48-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("./assets/fonts/oswald/oswald-v48-latin-regular.woff") format("woff"),
+    /* Modern Browsers */
+      url("./assets/fonts/oswald/oswald-v48-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("./assets/fonts/oswald/oswald-v48-latin-regular.svg#Oswald")
+      format("svg"); /* Legacy iOS */
+}
+/* ubuntu-mono-regular - latin */
+@font-face {
+  font-family: "Ubuntu Mono";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/fonts/ubuntu-mono/ubuntu-mono-v15-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("./assets/fonts/ubuntu-mono/ubuntu-mono-v15-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */
+      url("./assets/fonts/ubuntu-mono/ubuntu-mono-v15-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("./assets/fonts/ubuntu-mono/ubuntu-mono-v15-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */
+      url("./assets/fonts/ubuntu-mono/ubuntu-mono-v15-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("./assets/fonts/ubuntu-mono/ubuntu-mono-v15-latin-regular.svg#UbuntuMono")
+      format("svg"); /* Legacy iOS */
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
